--- a/res/layout/partial_item_layout.xml
+++ b/res/layout/partial_item_layout.xml
@@ -2,17 +2,15 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="@drawable/list_item_frame"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="New Text"
-            android:id="@+id/lblFrom" />
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/lblTo" />
+            android:padding="10dp"
+            android:id="@+id/lblDesc" />
+
 </LinearLayout>
