--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,11 +3,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/mi_order"
           android:id="@+id/mi_order"
+          android:icon="@drawable/ic_action_sort"
           android:showAsAction="ifRoom|withText">
 
     </item>
     <item android:title="@string/mi_shuffle"
           android:id="@+id/mi_shuffle"
+          android:icon="@drawable/ic_action_shuffle"
           android:showAsAction="ifRoom|withText">
 
     </item>
